# pyvat-with-checksums

./: Dockerfile.test  Makefile  README.md  docker-compose.test.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
pyvat_with_checksums/: __init__.py  core.py
pyvat_with_checksums/countries/: __init__.py  andorra.py  austria.py  belgium.py  brazil.py  bulgaria.py  croatia.py  cyprus.py  czech_republic.py  denmark.py  estonia.py  europe.py  finland.py  france.py  germany.py  greece.py  hungary.py  ireland.py  italy.py  latvia.py  lithuania.py  luxembourg.py  malta.py  netherlands.py  norway.py  poland.py  portugal.py  romania.py  russia.py  serbia.py  slovakia_republic.py  slovenia.py  spain.py  sweden.py  switzerland.py  united_kingdom.py
tests/: test_core.py  test_integration.py
tests/countries/: test_andorra.py  test_austria.py  test_belgium.py  test_brazil.py  test_bulgaria.py  test_croatia.py  test_cyprus.py  test_czech__republic.py  test_denmark.py  test_estonia.py  test_europe.py  test_finland.py  test_france.py  test_germany.py  test_greece.py  test_hungary.py  test_ireland.py  test_italy.py  test_latvia.py  test_lithuania.py  test_luxembourg.py  test_malta.py  test_netherlands.py  test_norway.py  test_poland.py  test_portugal.py  test_romania.py  test_russian__federation.py  test_serbia.py  test_slovakia__republic.py  test_slovenia.py  test_spain.py  test_sweden.py  test_switzerland.py  test_united__kingdom.py
