[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyvat-with-checksums"
version = "0.1.0"
description = "A Python package for validating VAT numbers."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Rok Sprogar", email = "rok.sprogar@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
dependencies = []

[project.urls]
Repository = "https://github.com/roksprogar/pyvat-with-checksums"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pyvat_with_checksums"]

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
